# fastfp

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
examples/: run_fp.ipynb  run_fp.py  run_nmfp.py
fastfp/: __init__.py  constants.py  fastfp.py  nmfp.py  utils.py
